kubernetes/argocd-apps/affine/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: affine-redis
  namespace: affine
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: affine-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affine-redis
  namespace: affine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: affine-redis
  template:
    metadata:
      labels:
        app: affine-redis
    spec:
      containers:
        - image: redis:7.2-alpine
          healthcheck:
            interval: 10s
            retries: 5
            test:
              - CMD
              - redis-cli
              - ping
            timeout: 5s
          name: redis
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: redis-data
