kubernetes/argocd-apps/affine/service-affine.yaml
apiVersion: v1
kind: Service
metadata:
  name: affine
  namespace: affine
spec:
  ports:
  - port: 3010
    targetPort: 3010
    name: http
  selector:
    app: affine
