kubernetes/argocd-apps/affine/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: affine-redis
  namespace: affine
spec:
  ports:
  - port: 6379
  selector:
    app: affine-redis
